Fix scroll flickering

--- a/packages/portal-style/src/modules/_guides.scss
+++ b/packages/portal-style/src/modules/_guides.scss
@@ -233,7 +233,7 @@
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     border: 1px solid #D3D6D7;
-    min-height: calc(100vh - 490px);
+    min-height: calc(100vh - 135px);
     &-splash {
       display: block;
       object-fit: cover;
